--- a/image.html
+++ b/image.html
@@ -6,7 +6,7 @@
     <title>image link</title>
 </head>
 <body>
-    <h1>Image</h1>
+    <h1>image</h1>
     <p>this website is dedicated to my girlfriend</p>
     <img src="/WhatsApp Image 2025-12-23 at 12.51.26 AM.jpeg" alt="puppy plushie">
 </body>
