--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <h1>Welcome to My First Website</h1>
     <p>This is a simple landing page created for HTML practice.</p>
     <p>Explore the different pages:</p>
-    <a href="image.html" target="_blank">image</a>
-    <a href="list.html" target="_blank">list </a>
-    <a href="table.html" target="_blank">table</a>
-    <a href="dummytext.html" target="_blank">dummy text</a>
+    <a href="image.html" target="_blank">Image Page</a>
+    <a href="list.html" target="_blank">List Page</a>
+    <a href="table.html" target="_blank">Table Page</a>
+    <a href="dummytext.html" target="_blank">Dummy Text Page</a>
     <br>
     <br>
     <br>
