--- a/image.html
+++ b/image.html
@@ -8,6 +8,6 @@
 <body>
     <h1>image</h1>
     <p>this website is dedicated to my girlfriend</p>
-    <img src="/WhatsApp Image 2025-12-23 at 12.51.26 AM.jpeg" alt="puppy plushie">
+    <img src="puppy.jpeg" alt="puppy plushie">
 </body>
 </html>
