--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <a href="list.html" target="_blank">List Page</a>
     <a href="table.html" target="_blank">Table Page</a>
     <a href="dummytext.html" target="_blank">Dummy Text Page</a>
+    <a href="forms.html" target="_blank">Forms Page</a>
     <br>
     <br>
     <br>
